2010-11-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* nsmenu.m: Use #include <config.h> instead of "config.h".

	* term.c (Qglyphless_char,last_glyphless_glyph_frame)
	(last_glyphless_glyph_face_id. last_glyphless_glyph_merged_face_id):
	Move declarations ...
	* lisp.h (Qglyphless_char,last_glyphless_glyph_frame)
	(last_glyphless_glyph_face_id. last_glyphless_glyph_merged_face_id):
	... here.

	* emacs.c (gdb_use_union, gdb_valbits,gdb_gctypebits)
	(gdb_data_seg_bits, gdb_array_mark_flag, PVEC_FLAG)
	(gdb_pvec_type):
	* print.c (print_output_debug_flag):
	* lisp.h (debug_print): Mark as EXTERNALLY_VISIBLE.
	(safe_debug_print): New declaration.

	* xterm.c:
	* systty.h:
	* sound.c: Include <sys/ioctl.h> unconditionally.

2010-11-22  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* alloc.c (mark_maybe_object): Return early if given a Lisp
	integer (Bug#6301).

2010-11-21  Ken Brown  <kbrown@cornell.edu>

	* sheap.c (STATIC_HEAP_SIZE): Revert previous change.

2010-11-21  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (ns_right_command_modifier, ns_right_control_modifier):
	Define (Bug#7458).
	(NSRightCommandKeyMask, NSRightControlKeyMask): Define (Bug#7458).
	(EV_MODIFIERS): Check for NSRightCommandKeyMask and
	NSRightControlKeyMask also (Bug#7458).
	(keyDown): Ditto (Bug#7458).
	(syms_of_nsterm): Defvar ns-right-command-modifier and
	ns-right-control-modifier (Bug#7458).

2010-11-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* sysdep.c (sys_subshell): Remove SET_EMACS_PRIORITY.
	* emacs.c (emacs_priority, syms_of_emacs): Remove emacs_priority.

	* intervals.h (temp_set_point, temp_set_point_both):
	* buffer.h (offset_intervals, copy_intervals): Remove INLINE.

2010-11-20  Ken Brown  <kbrown@cornell.edu>

	* sheap.c (STATIC_HEAP_SIZE): Increase to 13MB.

2010-11-20  Eli Zaretskii  <eliz@gnu.org>

	* term.c (produce_glyphless_glyph): Use \uNNNN, \UNNNNNN, or
	\xNNNNNN for hex-code display of glyphless characters.

2010-11-20  Jan Djärv  <jan.h.d@swipnet.se>
